feat: add cancel net action
